# aurena

./: Cargo.toml  README.md
src/: errors.rs  main.rs  terminal.rs
src/media/: audio.rs  image.rs  mod.rs  video.rs
src/sixel/: color.rs  converter.rs  mod.rs  monochrome.rs
